--- a/src/contacts.html
+++ b/src/contacts.html
@@ -50,7 +50,7 @@
 
     <!-- Подвал сайта -->
     <footer>
-        <p>&copy; 2023 Название вашего сайта. Все права защищены.</p>
+        <p>&copy; 2052 Название моего сайта. Все права защищены.</p>
         <p>Телефон: +7 (123) 456-78-90</p>
     </footer>
 </body>
