--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Логотип или название сайта</a>
+        <a href="index.html">Логотип или название сайта</a>
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
