--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная - Название вашего сайта</title>
     <meta name="description" content="Краткое описание главной страницы вашего сайта">
-    <link rel="icon" href="../assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <!-- Шапка сайта -->
     <header>
-        <a href="index.html">Логотип или название сайта</a>
+        <a href="../index.html">Логотип или название сайта</a>
         <!-- Главное меню навигации -->
         <nav>
             <ul>
                 <li><a href="index.html">Главная</a></li>
-                <li><a href="about.html">О нас</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="src/about.html">О нас</a></li>
+                <li><a href="src/contacts.html">Контакты</a></li>
             </ul>
         </nav>
     </header>
