--- a/src/about.html
+++ b/src/about.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Логотип или название сайта</a>
+        <a href="../index.html">Логотип или название сайта</a>
         <nav>
             <ul>
-                <li><a href="index.html">Главная</a></li>
+                <li><a href="../index.html">Главная</a></li>
                 <li><a href="about.html">О нас</a></li>
                 <li><a href="contacts.html">Контакты</a></li>
             </ul>
