--- a/src/contacts.html
+++ b/src/contacts.html
@@ -25,26 +25,12 @@
 
     <!-- Уникальное основное содержимое страницы -->
     <main>
-        <h1>Добро пожаловать на наш сайт!</h1>
+        <h1>Наши контакты</h1>
 
         <!-- Секция 1 с якорем -->
         <section id="services">
-            <h2>Наши услуги</h2>
-            <p>Описание предоставляемых услуг...</p>
-            <a href="#contacts">Связаться с нами</a>
-        </section>
-
-        <!-- Секция 2 с якорем -->
-        <section id="portfolio">
-            <h2>Портфолио</h2>
-            <p>Примеры наших работ...</p>
-        </section>
-
-        <!-- Секция 3 с якорем -->
-        <section id="contacts">
-            <h2>Контактная информация</h2>
-            <p>Наши контакты...</p>
-            <a href="contacts.html">Подробнее</a>
+            <h2>Телефон</h2>
+            <p>+1 234 567-89-01</p>
         </section>
     </main>
 
